feat(credits): add Mod authors category with initial person entries